@@ -99,7 +99,7 @@ namespace libtorrent {
 	constexpr int user_alert_id = 10000;
 
 	// this constant represents "max_alert_index" + 1
-	constexpr int num_alert_types = 102;
+	constexpr int num_alert_types = 103;
 
 	// internal
 	constexpr int abi_alert_count = 128;
@@ -3062,6 +3062,24 @@ TORRENT_VERSION_NAMESPACE_3_END
 
 		// the list of the files in the torrent
 		aux::vector<std::int64_t, file_index_t> files;
+	};
+
+	// posted when torrent_handle::post_download_queue() is called
+	struct TORRENT_EXPORT piece_info_alert final : torrent_alert
+	{
+		// internal
+		TORRENT_UNEXPORT piece_info_alert(aux::stack_allocator& alloc, torrent_handle h
+			, std::vector<partial_piece_info> pi, std::vector<block_info>&& bd);
+		TORRENT_DEFINE_ALERT_PRIO(piece_info_alert, 102, alert_priority::critical)
+
+		static constexpr alert_category_t static_category = alert_category::piece_progress;
+		std::string message() const override;
+
+		// info about pieces being downloaded for the torrent
+		std::vector<partial_piece_info> piece_info;
+
+		// storage for block_info pointers in partial_piece_info objects
+		std::vector<block_info> block_data;
 	};
 
 	// internal
