@@ -751,6 +751,7 @@ namespace libtorrent {
 		void post_peer_info();
 		void get_peer_info(std::vector<peer_info>* v);
 		void get_download_queue(std::vector<partial_piece_info>* queue) const;
+		void post_download_queue();
 
 		void update_auto_sequential();
 	private:
